5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1638_652.log
== TEST (2019-04-11 11:57:20) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = d1 - d1
d2 = d2
d3 = d3

x = d1,d2
if(x // n):
	msg = "SIM"
else:
	msg = "NAO"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d1 = d1 - d1
NameError: name 'd1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:58:29) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = d1 - d1
d2 = d2
d3 = d3

x = d1,d2
if(x // n):
	msg = "SIM"
else:
	msg = "NAO"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d1 = d1 - d1
NameError: name 'd1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:58:42) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = d1 - 1
d2 = d2
d3 = d3

x = d1,d2
if(x // n):
	msg = "SIM"
else:
	msg = "NAO"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d1 = d1 - 1
NameError: name 'd1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:59:04) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = d1 - 1
d2 = d2
d3 = d3

x = d1,d2
if(x // n):
	msg = "SIM"
else:
	msg = "NAO"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d1 = d1 - 1
NameError: name 'd1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:59:30) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = - d1
d2 = d2
d3 = d3

x = d1,d2
if(x // n):
	msg = "SIM"
else:
	msg = "NAO"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d1 = - d1
NameError: name 'd1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:59:45) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = - 1
d2 = d2
d3 = d3

x = d1,d2
if(x // n):
	msg = "SIM"
else:
	msg = "NAO"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d2 = d2
NameError: name 'd2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:02:23) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100
d2 = n +100
d3 = n + 200

x = d1,d2
if(x // n):
	msg = "SIM"
else:
	msg = "NAO"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(x // n):
TypeError: unsupported operand type(s) for //: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:02:58) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100
d2 = n +100
d3 = n + 200

x = d1,d2
if(d1 // n):
	msg = "SIM"
else:
	msg = "NAO"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(x // n):
TypeError: unsupported operand type(s) for //: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:03:10) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100
d2 = n +100
d3 = n + 200

x = d1,d2
if(d1 // n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:51:20) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100

if(d1 // n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:51:34) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100

if(d1 / n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:51:47) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100

if(d1 / n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:52:49) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100

if(d1 // n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:52:57) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100

if(d1 // n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:53:15) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100

if(d1 % n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:53:22) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100

if(d1 % n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:56:41) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:56:50) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 3 digitos do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:59:22) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:59:28) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:00:59) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if((n // d1) % n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:01:18) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if((n // d1) % n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:01:34) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if((n // d1) % d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:01:40) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if((n // d1) % d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:02:36) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:03:24) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(d1 // n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:03:34) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(d1 // n):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:03:53) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:04:00) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:04:15) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:11:31) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:11:42) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:11:49) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:12:06) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:13:10) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n / d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:13:16) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n / d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:13:21) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n / d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:13:26) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n / d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:15:32) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:15:40) 
-- CODE:
n = int(input("numero inteiro:"))

#decompoe o 1 digito do numero
d1 = n - 100

if(n // d1):
	msg = "SIM"
else:
	msg = "NAO"

print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
